--- a/ConnectedRoboSketch/app/src/main/AndroidManifest.xml
+++ b/ConnectedRoboSketch/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".camActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,6 +17,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.android.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths">
+            </meta-data>
+        </provider>
+
     </application>
+
+    <uses-feature android:name="android.permissions.CAMERA"/>
+    <uses-feature android:name="android.permissions.READ_EXTERNAL_STORAGE"/>
+    <uses-feature android:name="android.permissions.WRITE_EXTERNAL_STORAGE"/>
 
 </manifest>
