- Added code to send the full picture over Bluetooth - Note: Hard coded name of PC required, removed mine for privacy - Added a textView to the cam view to show some data (will be removed eventually) - Added some permissions stuff for Bluetooth

--- a/ConnectedRoboSketch/app/src/main/AndroidManifest.xml
+++ b/ConnectedRoboSketch/app/src/main/AndroidManifest.xml
@@ -34,5 +34,8 @@
     <uses-feature android:name="android.permissions.CAMERA"/>
     <uses-feature android:name="android.permissions.READ_EXTERNAL_STORAGE"/>
     <uses-feature android:name="android.permissions.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
 </manifest>
